# stock

./: .gitignore  README.md  application.py  deploy.sh  jobs.sqlite  main.py  manage.py  pyproject.toml  requirements.txt
apps/shared/decorators/: auth_guard.py
apps/shared/hooks/: use_config.py
apps/stock_tracker/: main.py
apps/stock_tracker/src/: app.py
apps/stock_tracker/src/db/: save.py
apps/stock_tracker/src/interfaces/: naver-stock.d.ts
apps/webhook/: README.md  main.py
apps/webhook/src/: app.py
apps/webhook/src/routes/: main.py
scripts/: health_check.py  last_updated.py  set_dev_env.py  upload.py
scripts/helpers/: env_to_dict.py
shared/hooks/: use_config.py
shared/utils/: array.py  constants.py  metadata.py  null_safety.py  time.py
src/: app.py
src/db/: save.py
src/db/models/: stock.py
src/hooks/: use_config.py  use_safe_request.py
src/routes/: main.py
src/scheduler/: main.py
src/scheduler/jobs/: main.py  notify.py
src/static/: kakao-talk-template.txt
src/stock_tracker/: extract_stock_info.py
src/stock_tracker/notifier/: decide_case.py  main.py  template.py
src/utils/: array.py  constants.py
stock_tracker/: main.py
stock_tracker/src/: app.py
stock_tracker/src/db/: main.py  save.py
stock_tracker/src/decorators/: auth_guard.py
stock_tracker/src/hooks/: use_config.py
stock_tracker/src/routes/: config.py  main.py
stock_tracker/src/scheduler/: config.py  main.py
stock_tracker/src/stock_tracker/: endpoints.py  extract_stock_info.py
stock_tracker/src/utils/: constants.py  null_safety.py
tests/: notify.py
(+14 files in other folders)
